syntax = "proto3";

package io.maddennis.user;

option java_multiple_files = true;
option java_package = "io.maddennis.user";

message NameUserRequest {
  string name = 1;
}

message IdUserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

service UserService {
  rpc fetchUserById (IdUserRequest) returns (UserResponse) {
  }

  rpc fetchUserByName (NameUserRequest) returns (UserResponse) {
  }
}